--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install Requeriments
         run: |
           python -m pip install --upgrade pip
-          pip install -U -r requeriments.txt
+          pip install -U -r requirements.txt
           sudo npm install @playwright/test
           sudo npx playwright install-deps
           rfbrowser init
