--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -9,10 +9,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - name: Install Python 3.10
+      - name: Install Python 3.12.3
         uses: actions/setup-python@v4
         with: 
-          python-version: '3.10'
+          python-version: '3.12.3'
 
       - name: Install Node.js 19.1
         uses: actions/setup-node@v3
@@ -23,6 +23,7 @@ jobs:
         run: 
           python -m pip install --upgrade pip
           pip install -U -r requirements.txt
+          sudo npm install @playwright/test
           sudo npx playwright install-deps
           rfbrowser init
       
