--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -18,14 +18,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '19.1'
-      
+        
+          
       - name: Install Requeriments
         run: 
           python -m pip install --upgrade pip
           pip install -U -r requirements.txt
-          sudo npm install @playwright/test
-          sudo npx playwright install-deps
           rfbrowser init
+          
+      - name: Run Playwright tests
+        uses: microsoft/playwright-github-action@v1.5.7
       
       - name: Run Web Tests
         run: 
