--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -19,14 +19,14 @@ jobs:
         with:
           node-version: '19.1'
         
-          
       - name: Install Requeriments
         run: 
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          sudo npm install @playwright/test
-          sudo npx playwright install-deps
           rfbrowser init
+          
+      - name: Run Playwright tests
+        uses: microsoft/playwright-github-action@v1.5.7
       
       - name: Run Web Tests
         run: 
