--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -4,16 +4,16 @@ on: [push]
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - name: Get code
-      uses: actions/checkout@v4.1.2
+      uses: actions/checkout@v3
 
-    - name: Use Node.js 20
-      uses: actions/setup-node@v4.0.2
+    - name: Use Node.js 19.1
+      uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: 19.1
         cache: 'npm'
 
     - name: Setup Python
@@ -34,17 +34,4 @@ jobs:
             
     - name: Run E2E Tests
       run: robot -d ./results -v HEADLESS:true -v BROWSER:chromium tests
-    
-    - name: Robot Reporter
-      uses: joonvena/robotframework-reporter-action@v2.4
-      if: always()
-      with:
-        gh_access_token: ${{ secrets.GITHUB_TOKEN }}
-        report_path: logs
-
-    - name: Upload Reporter
-      uses: actions/upload-artifact@v4.4.3
-      if: always()
-      with:
-        name: Test Report
-        path: logs       
+      
