--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -1,37 +1,33 @@
-name: E2E tests
-
+name: Run Web Tests
+run-name: On push - Web Test Run
 on: [push]
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-20.04
-
     steps:
-    - name: Get code
-      uses: actions/checkout@v3
-
-    - name: Use Node.js 19.1
-      uses: actions/setup-node@v3
-      with:
-        node-version: 19.1
-        cache: 'npm'
-
-    - name: Setup Python
-      uses: actions/setup-python@v5.3.0
-      with:
-        python-version: 3.12
-
-    - name: Install Deps
-      run: 
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Browser init
-      run: rfbrowser init
+      - name: Checkout
+        uses: actions/checkout@v3
       
-    - name: Run Playwright tests
-      uses: microsoft/playwright-github-action@v1.5.7
-            
-    - name: Run E2E Tests
-      run: robot -d ./results -v HEADLESS:true -v BROWSER:chromium tests
+      - name: Install Python 3.10
+        uses: actions/setup-python@v4
+        with: 
+          python-version: '3.10'
+
+      - name: Install Node.js 19.1
+        uses: actions/setup-node@v3
+        with:
+          node-version: '19.1'
       
+      - name: Install Requeriments
+        run: 
+          python -m pip install --upgrade pip
+          pip install -U -r requirements.txt
+          sudo npm install @playwright/test
+          sudo npx playwright install-deps
+          rfbrowser init
+      
+      - name: Run Web Tests
+        run: 
+          robot -d ./results -v HEADLESS:true -v BROWSER:chromium tests
+       
