--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -23,10 +23,12 @@ jobs:
         run: 
           python -m pip install --upgrade pip
           pip install -U -r requirements.txt
-          sudo npm install @playwright/test
           sudo npx playwright install-deps
           rfbrowser init
-      
+          
+      - name: Run Playwright tests
+        uses: microsoft/playwright-github-action@v1.5.7
+        
       - name: Run Web Tests
         run: 
           robot -d ./results -v HEADLESS:true -v BROWSER:chromium tests
