--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-robotframework
-robotframework-browser
-robotframework-faker
+robotframework==7.0
+robotframework-browser==18.9.1
+robotframework-faker==5.0.0
