--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -21,7 +21,7 @@ jobs:
       
       - name: Install Requeriments
         run: 
-          pyenv install 3.12.3
+          python -m pip install --upgrade pip
           pip install -U -r requirements.txt
           rfbrowser init
           
