--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -23,6 +23,8 @@ jobs:
         run: 
           python -m pip install --upgrade pip
           pip install -U -r requirements.txt
+          sudo npm install @playwright/test
+          sudo npx playwright install-deps
           rfbrowser init
           
       - name: Run Playwright tests
