--- a/.github/workflows/workflow_pipeline.yml
+++ b/.github/workflows/workflow_pipeline.yml
@@ -23,7 +23,7 @@ jobs:
         run: 
           python -m pip install --upgrade pip
           pip install -U -r requirements.txt
-          sudo npm install @playwright/test
+          sudo npm install @playwright
           sudo npx playwright install-deps
           rfbrowser init
           
